vendor/structopt-0.3.21/tests/ui/skip_subcommand.stderr
error: subcommand, flatten and skip cannot be used together
  --> $DIR/skip_subcommand.rs:17:29
   |
17 |     #[structopt(subcommand, skip)]
   |                             ^^^^
